kubernetes/01-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: echry
  labels:
    name: echry
    environment: production
