kubernetes/08-echry-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: echry
  namespace: echry
spec:
  replicas: 2
  selector:
    matchLabels:
      app: echry
  template:
    metadata:
      labels:
        app: echry
    spec:
      containers:
        - name: echry
          image: taher2bedhief/echry-app:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 3000
          resources:
            requests:
              memory: "256Mi"
              cpu: "200m"
            limits:
              memory: "512Mi"
              cpu: "500m"

          startupProbe:
            httpGet:
              path: /
              port: 3000
            failureThreshold: 30
            periodSeconds: 10

          readinessProbe:
            httpGet:
              path: /
              port: 3000
            initialDelaySeconds: 20
            periodSeconds: 15

          livenessProbe:
            httpGet:
              path: /
              port: 3000
            initialDelaySeconds: 25
            periodSeconds: 20
