kubernetes/09-echry-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: echry-service
  namespace: echry
spec:
  type: NodePort
  ports:
    - port: 80
      targetPort: 3000
      nodePort: 30000
  selector:
    app: echry
