kubernetes/10-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: echry-ingress
  namespace: echry
  annotations:
    alb.ingress.kubernetes.io/group.name: echry-app-lb
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/certificate-arn: arn:aws:acm:eu-west-3:216040614736:certificate/d1f7a8ff-d80e-4c34-b4bc-c65e2d81f26a
    alb.ingress.kubernetes.io/target-type: ip
    alb.ingress.kubernetes.io/backend-protocol: HTTP
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTP":80}, {"HTTPS":443}]'
    alb.ingress.kubernetes.io/ssl-redirect: '443'
    kubernetes.io/ingress.class: alb
spec:
  rules:
  - host: www.ech-ry.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: echry-service
            port:
              number: 80
